better angular styling, fix for reverse shift click not working

--- a/src/themes/material.less
+++ b/src/themes/material.less
@@ -67,7 +67,10 @@
 
       &:hover,
       &:hover .dt-row-block{
-        background-color: #b3e5fc;
+        background-color: #eee;
+        transition-property: background;
+        transition-duration: .3s;
+        transition-timing-function: linear;
       }
 
       &:hover{
@@ -99,12 +102,12 @@
       a{
         height:50px;
         line-height:50px;
-        color:#2196F3;
+        color: rgba(0,0,0,.54);
         padding:0 .5rem;
         text-decoration: none;
 
         &:hover{
-          color:#999;
+          color: rgba(0,0,0,.75);
         }
       }
 
